--- a/JS/index.html
+++ b/JS/index.html
@@ -21,8 +21,12 @@
 
 <!-- <script src="t2.js"></script> -->
 
-<script src="t3.js"></script>
+<!-- <script src="t3.js"></script> -->
 
+
+<!-- <script src="t4.js"></script> -->
+
+<script src="t5.js"></script>
 
 
 
