--- a/JS/index.html
+++ b/JS/index.html
@@ -26,7 +26,10 @@
 
 <!-- <script src="t4.js"></script> -->
 
-<script src="t5.js"></script>
+<!-- <script src="t5.js"></script> -->
+
+
+<script src="t6.js"></script>
 
 
 
