t7 loops and error handling in js

--- a/JS/index.html
+++ b/JS/index.html
@@ -29,7 +29,8 @@
 <!-- <script src="t5.js"></script> -->
 
 
-<script src="t6.js"></script>
+<!-- <script src="t6.js"></script> -->
+<script src= "t7.js"></script>
 
 
 
