added t9  with js and adv concept

--- a/JS/index.html
+++ b/JS/index.html
@@ -8,7 +8,8 @@
         /* including css  */
     </style>
 </head>
-<body onload="loadfun()">
+<!-- onload="loadfun()"  // keep this function in the body tag -->
+<body >
     <h1 id="first" onmouseover="mouseover()"  onmouseleave="mouseleave()">Learning JS</h1>
     <h1>Hello</h1>
     <h1>Bye</h1>
@@ -50,7 +51,8 @@
 
 <!-- <script src="t6.js"></script> -->
 <!-- <script src= "t7.js"></script> -->
-<script src= "t8.js"></script>
+<!-- <script src= "t8.js"></script> -->
+<script src="t9.js"></script>
 
 
 </body>
